--- a/webapp/src/Css/ProfilePage.css
+++ b/webapp/src/Css/ProfilePage.css
@@ -39,4 +39,12 @@
 }
 
 
-
+.camera-page-container{
+  width: 90%;
+  height: 86%;
+  margin: auto;
+  margin-top: 20px;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  padding: 10px;
+  display: flex;
+}
