--- a/webapp/src/Css/Header.css
+++ b/webapp/src/Css/Header.css
@@ -1,6 +1,6 @@
-header {
-  padding: 1rem 2rem;
-  height: 70px;
+/* header {
+  padding: 0.7rem 2rem;
+  height: 10vh;
   display: flex;
   align-items: center;
 }
@@ -21,7 +21,7 @@ header nav a {
   color: #444;
   text-decoration: none;
   transition: color 0.3s ease;
-}
+} */
 
 
 
@@ -48,6 +48,16 @@ header nav .me-4 {
   margin-right: 2rem;
 }
 
+.form-label-small {
+  font-size: 0.8rem; /* Adjust as needed */
+}
+
+.form-input-small {
+  font-size: 0.8rem; /* Adjust as needed */
+  padding: 5px;
+   /* Reduce padding for smaller inputs */
+}
+
 
 .form-box {
   border-radius: 12px;
@@ -70,7 +80,7 @@ header nav .me-4 {
 .biometrics-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 1rem;
+  gap: 0.7rem;
 }
 
 .biometric-item {
@@ -82,11 +92,11 @@ header nav .me-4 {
 .form-input {
   height: 50px;
   width: 100%;
-  font-size: 1rem;
+  font-size: 0.7rem;
   border: 1px solid #ddd;
   border-radius: 0.375rem;
   background-color: #f8f9fa;
-  padding: 0 1rem;
+  padding: 0 0.7rem;
 }
 
 .form-input:focus {
@@ -115,7 +125,7 @@ header nav .me-4 {
   font-weight: 600;
   letter-spacing: 1px;
   padding: 10px 20px;
-  font-size: 1rem;
+  font-size: 0.7rem;
   transition: all 0.3s ease;
 }
 
